<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/activity_main_fake_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@null"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/activity_main_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="#FFF"
                        app:riv_oval="true" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/activity_main_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/hi_user"
                        android:textColor="@color/yellow_banana" />


                    <com.hanks.htextview.scale.ScaleTextView
                        android:id="@+id/activity_main_talk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="What do you want to do today?"
                        android:textColor="@color/yellow_banana"
                        android:textSize="16sp" />


                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/activity_main_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_setting"
                    app:tint="@color/white" />

            </RelativeLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="60dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_main_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:gravity="center"
        android:text="@string/try_to_add_some_new_task"
        android:textColor="@color/yellow_apple"
        android:visibility="invisible"
        app:layout_anchor="@+id/activity_main_fake_container"
        app:layout_anchorGravity="center" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/activity_main_task_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="10dp"
        android:text="@string/Task"
        app:icon="@drawable/ic_add"
        app:layout_anchor="@id/activity_main_recycler"
        app:layout_anchorGravity="bottom|right" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>